--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-    "name":"EmployeeTracker",
-    "version":"1.0.0",
-    "main":"server.js",
-    
-    "dependencies":
-    {
-        "console.table":"^0.10.0",
-        "inquirer":"^8.2.5",
-        "mysql2":"^2.3.3"
+    "name": "EmployeeTracker",
+    "version": "1.0.0",
+    "main": "server.js",
+    "dependencies": {
+        "console.table": "^0.10.0",
+        "dotenv": "^16.0.3",
+        "inquirer": "^8.2.5",
+        "mysql2": "^2.3.3"
     }
-    
-    
 }
